<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/update_product_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_id"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_name"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_update_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_description"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_update_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_price"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_update_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:inputType="numberDecimal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:text="@string/txt_edit"
        android:textSize="@dimen/_14ssp"
        android:background="@color/teal_700"/>

</LinearLayout>